# TechSupportBot

./: .dockerignore  .env:Zone.Identifier  .flake8  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  Dockerfile  Dockerfile.dev  Jenkinsfile  Makefile  Pipfile  README.md  __init__.py  bot.py  changelog.md  config.default.yaml  config.default.yml  default.env  docker-compose.override.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: black.yml  ci.yml  codeql.yml  comment-trigger.yml  docker-image.yml  flake8.yml  isort.yml  lfendings.yml  lint.yml  pylint.yml  pytest.yml
Documentation/: Extension-howto.md  ExternalSetupGuide.md  TestCases.md  conf.py  index.md  index.rst
basement_bot/: __init__.py  admin.py  api.py  base.py  bot.py  cogs.py  config.py  context.py  database.py  decorate.py  embed.py  embeds.py  endpoints.py  error.py  exceptions.py  help.py  helper.py  loader.py  logger.py  main.py  plugin.py  plugin_api.py  raw.py  restart.py  util.py  utils.py
basement_bot/.keepfornow/: test_database.py
basement_bot/base/: __init__.py  advanced.py  cogs.py  data.py  extension.py  plugin.py
basement_bot/botlogging/: __init__.py  delayed.py  logger.py
basement_bot/cogs/: __init__.py  admin.py  config.py  help.py  ipc.py  listen.py  raw.py
basement_bot/extensions/: application.py  burn.py  conch.py  correct.py  directory.py  duck.py  embed.py  emoji.py  factoids.py  gate.py  giphy.py  google.py  grab.py  hangman.py  hello.py  htd.py  hug.py  ipinfo.py  iss.py  joke.py  kanye.py  lenny.py  logger.py  mock.py  news.py  poll.py  protect.py  relay.py  roll.py  rules.py  spotify.py  techsupport.py  translate.py  urban.py  warcraft.py  weather.py  who.py  wolfram.py  wyr.py  xkcd.py
basement_bot/plugins/: admin.py  burn.py  conch.py  correct.py  directory.py  duck.py  embed.py  emoji.py  eval.py  factoids.py  gate.py  giphy.py  google.py  grab.py  hangman.py  hello.py  hug.py  hwinfo.py  ipinfo.py  iss.py  kanye.py  lenny.py  logger.py  mock.py  moderator.py  news.py  poll.py  protect.py  (+13 more)
botlogging/: logger.py
commands/: __init__.py  backup.py  burn.py  dictionary.py  duck.py  echo.py  embed.py  emoji.py  factoids.py  forum.py  github.py  hello.py  htd.py  hug.py  lenny.py  moderator.py  modlog.py  modmail.py  news.py  nicknamefix.py  poll.py  relay.py  role.py  search.py  slowmode.py  spotify.py  translate.py  whois.py  winerror.py
configuration/: __init__.py  config.default.json  config.meta.json
core/: __init__.py  cogs.py  cryptography.py  databases.py  http.py  moderation.py  scheduler.py
docs/: index.md
documentation/: Cog Types.md  Confirm.md  Dependencies.md  Development Guide.md  DevelopmentGuide.md  Extension-howto.md  External.md  ExternalSetupGuide.md  Getting Started.md  PrivacyPolicy.md  Test Cases.md  Using The Bot.md  UsingTheBot.md  privacy_policy.md
functions/: automod.py  autoreact.py  logger.py  nickname.py  paste.py
hide_me/: logger.py  spotify.py  translate.py
ircrelay/: formatting.py  relay.py
modules/: __init__.py
resources/: wmo-map.json  wyrQuestions.txt
site/: 404.html  index.html
techsupport_bot/: __init__.py  bot.py  context.py  embeds.py  error.py  main.py  util.py
tests/: config_for_tests.py
ui/: __init__.py  confirm.py  pagination.py
utilities/: application.js
(+379 files in other folders)
